--- a/package.json
+++ b/package.json
@@ -9,8 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@handsontable/react": "^15.2.0",
+    "chart.js": "^4.4.9",
+    "chartjs-chart-matrix": "^3.0.0",
+    "d3": "^7.9.0",
+    "firebase": "^11.6.0",
+    "handsontable": "^15.2.0",
+    "lodash": "^4.17.21",
+    "mathjs": "^14.4.0",
+    "next": "15.3.1",
+    "openai": "^4.95.1",
+    "papaparse": "^5.5.2",
+    "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-firebase-hooks": "^5.1.1",
+    "react-grid-layout": "^1.5.1",
+    "react-hot-toast": "^2.5.2",
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
 }
