--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "d3": "^7.9.0",
     "firebase": "^11.6.0",
     "handsontable": "^15.2.0",
+    "katex": "^0.16.22",
     "lodash": "^4.17.21",
     "mathjs": "^14.4.0",
     "next": "15.3.1",
@@ -26,6 +27,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-grid-layout": "^1.5.1",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
