--- a/firebase.json
+++ b/firebase.json
@@ -1,30 +1,18 @@
 {
-    "hosting": [
-      {
-        "target": "unifieddata-api",
-        "appHosting": {
-          "run": {
-            "runtime": "custom",
-            "entry": "Dockerfile",
-            "region": "us-central1"
-          }
+    "hosting": {
+      "public": "out",
+      "ignore": ["**/.*"],
+      "rewrites": [
+        {
+          "source": "/api/**",
+          "destination": "https://unifieddata-api-552541459765.us-central1.run.app/api/:path*"
+        },
+        {
+          "source": "**",
+          "destination": "/index.html"
         }
-      },
-      {
-        "target": "frontend",
-        "public": "public",
-       "rewrites": [
-          {
-            "source": "/api/**",
-            "destination": "https://unifieddata-api-552541459765.us-central1.run.app/api/:path*"
-          },
-          {
-            "source": "**",
-            "destination": "/index.html"
-          }
-        ]
-      }
-    ]
+      ]
+    }
   }
   
   
