--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "preexport": "next build"
   },
   "dependencies": {
     "@handsontable/react": "^15.2.0",
@@ -18,7 +20,7 @@
     "katex": "^0.16.22",
     "lodash": "^4.17.21",
     "mathjs": "^14.4.0",
-    "next": "15.3.1",
+    "next": "^15.3.1",
     "openai": "^4.95.1",
     "papaparse": "^5.5.2",
     "plotly.js": "^3.0.1",
