--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@handsontable/react": "^15.2.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-chart-matrix": "^3.0.0",
     "d3": "^7.9.0",
