--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "papaparse": "^5.5.2",
     "plotly.js": "^3.0.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-grid-layout": "^1.5.1",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
+    "react-to-pdf": "^2.0.0",
     "react-toastify": "^11.0.5",
     "xlsx": "^0.18.5"
   },
