--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "chart.js": "^4.4.9",
     "chartjs-chart-matrix": "^3.0.0",
     "d3": "^7.9.0",
+    "debounce": "^2.2.0",
     "firebase": "^11.6.0",
     "handsontable": "^15.2.0",
+    "hyperformula": "^3.0.0",
     "katex": "^0.16.22",
     "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "mathjs": "^14.4.0",
     "next": "^15.3.1",
     "openai": "^4.95.1",
