--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "chartjs-chart-matrix": "^3.0.0",
+    "critters": "^0.0.23",
     "d3": "^7.9.0",
     "debounce": "^2.2.0",
     "firebase": "^11.6.0",
@@ -24,13 +25,13 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "mathjs": "^14.4.0",
-    "next": "^15.3.1",
+    "next": "13.5.6",
     "openai": "^4.95.1",
     "papaparse": "^5.5.2",
     "plotly.js": "^3.0.1",
-    "react": "^19.0.0",
+    "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-grid-layout": "^1.5.1",
     "react-hot-toast": "^2.5.2",
